tempfile/derive_more/tests/compile_fail/into/multiple_skip.rs
#[derive(derive_more::Into)]
struct Foo {
    #[into(skip)]
    #[into(skip)]
    a: i32,
}

fn main() {}
